# QAdaptive

./: .gitignore  LICENSE  README.md  pyproject.toml
qadaptive/: __init__.py  action_definitions.py  adaptive_ansatz.py  mutable_ansatz_experiment.py  mutable_optimizer.py  mutation.py  operator_pool.py  outer_loop.py  plan_builders.py  pruning.py  simplification.py  trainer.py  utils.py
qadaptive/applications/: code_switch.py
qadaptive/core/: __init__.py  adaptive_ansatz.py  mutation.py  operator_pool.py  pruning.py  simplification.py
qadaptive/outer/: __init__.py  action_definitions.py  mutable_ansatz_experiment.py  outer_loop.py  plan_builders.py  plan_helpers.py
qadaptive/tests/: test_adaptive_ansatz.py  test_mutable_optimizer.py  test_mutation.py  test_operator_pool.py  test_pruning.py  test_simplification.py  test_trainer.py  test_utils.py
qadaptive/training/: __init__.py  history.py  spsa.py  stepwise_optimizer.py  termination_and_callback.py  trainer.py
qadaptive/training/optimizers/: __init__.py  adam.py  spsa.py  utils.py
qadaptive/utils/: __init__.py  simplification_utils.py
qadaptive/utils/plotting/: __init__.py  objective_plots.py  parameter_plots.py  plotting.py  traces.py
